# GEM_strategy_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_analysis.py  run_mcp_financial.py
src/gem_strategy_assistant/: __init__.py  __main__.py
src/gem_strategy_assistant/application/: __init__.py  agent.py  mcp_client.py  services.py  use_cases.py
src/gem_strategy_assistant/config/: __init__.py  constants.py
src/gem_strategy_assistant/domain/: __init__.py  models.py  strategy.py
src/gem_strategy_assistant/infrastructure/llm/: openai_client.py  report_generator.py
src/gem_strategy_assistant/infrastructure/market_data/: __init__.py  composite_provider.py  protocols.py  stooq.py  yahoo_finance.py
src/gem_strategy_assistant/infrastructure/mcp_servers/: __init__.py  financial_server.py  notification_server.py  search_server.py
src/gem_strategy_assistant/infrastructure/notifications/: __init__.py  pushover_client.py  sendgrid_client.py
src/gem_strategy_assistant/infrastructure/persistence/: __init__.py  database.py  migrations.py  repositories.py
src/gem_strategy_assistant/infrastructure/search/: __init__.py  brave_client.py  composite_search.py  protocols.py  serper_client.py
src/gem_strategy_assistant/presentation/: cli.py  gradio_app.py
src/momentum_assistant/config/: settings.py
src/momentum_assistant/domain/: models.py  strategy.py
src/momentum_assistant/infrastructure/: __init__.py
src/momentum_assistant/infrastructure/llm/: __init__.py  openai_client.py
src/momentum_assistant/infrastructure/market_data/: __init__.py  yahoo_finance.py
src/momentum_assistant/infrastructure/persistence/: __init__.py
