[tool.poetry]
name = "gem-strategy-assistant"
version = "0.1.0"
description = "Semi-automated GEM ETF investment assistant with MCP"
authors = ["Szymon Maciejewski<szymon.maciejewski.programista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.4"
mypy = "^1.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
momentum = "gem_strategy_assistant.presentation.cli:cli"