[tool.poetry]
name = "gem-strategy-assistant"
version = "0.1.0"
description = "Semi-automated GEM ETF investment assistant with MCP"
authors = ["Szymon Maciejewski <szymon.maciejewski.programista@gmail.com>"]
readme = "README.md"
packages = [{include = "momentum_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
polygon-api-client = "^1.13"
yfinance = "^0.2"
websockets = "^13.0"
pandas = "^2.2"
httpx = "^0.27"
sendgrid = "^6.11"
# python-pushover = "^0.4"
anthropic = "^0.25"
langgraph = "^0.2"
langgraph-checkpoint-sqlite = "^2.0"
mcp = "^1.0"
gradio = "^5.0"
plotly = "^5.22"
click = "^8.1"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.4"
mypy = "^1.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
python-pushover = ["python-pushover"]

[tool.poetry.scripts]
momentum = "gem_strategy_assistant.presentation.cli:cli"